--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,11 +21,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li><%= link_to 'Профиль', current_user, class: '' %></li>
-          <li><%= link_to 'Выйти', destroy_user_session_path, class: '', :method => :delete %></li>
+          <li><%= link_to 'Профиль', current_user, class: 'nav-link' %></li>
+          <li><%= link_to 'Выйти', destroy_user_session_path, class: 'nav-link', :method => :delete %></li>
         <% else %>
-          <li><%= link_to 'Войти', new_user_session_path, class: '' %></li>
-          <li><%= link_to 'Зарегистрироваться', new_user_registration_path, class: '' %></li>
+          <li><%= link_to 'Войти', new_user_session_path, class: 'nav-link' %></li>
+          <li><%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'nav-link' %></li>
         <% end %>
       </ul>
     </div>
