--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -4,6 +4,9 @@
   <div class="alert alert-danger">
     <div class="lead buffer-bottom">
       В вашей форме <%= errors.count %> ошибок
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+      </button>
     </div>
 
     <ul>
