--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,13 +34,13 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-lg-9">
+    <div class="col-lg-9 min-vh-100">
       <%= yield %>
     </div>
   </div>
 
-  <footer>
-    <p>&copy; Company 2016</p>
+  <footer class="blockquote-footer">
+    <p>&copy; Company 2021</p>
   </footer>
 
 </div>
