--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -3,7 +3,9 @@
 <% if errors.any? %>
   <div class="alert alert-danger">
     <div class="lead buffer-bottom">
-      В вашей форме <%= errors.count %> ошибок
+      <%= I18n.t("errors.messages.not_saved",
+                 count: errors.count)
+      %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
