--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,8 +33,8 @@
 </div>
 
 <div class="container">
-  <div class="row">
-    <div class="col-lg-9 min-vh-100">
+  <div class="row mt-5 justify-content-center vh-100">
+    <div class="col-8">
       <%= yield %>
     </div>
   </div>
