--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,8 @@
-<h1>Редактирование профиля</h1>
+<h1 class="mt-4 text-center">Редактирование профиля</h1>
 
-<div class="row">
-  <div class="col-md-6 buffer-top">
-    <%= render 'form' %>
+<%= render 'form' %>
 
-    <p class="buffer-top">
-      <%= link_to 'Сменить пароль', edit_user_registration_path %>
-    </p>
-  </div>
-</div>
+<p class="buffer-top">
+  <%= link_to 'Сменить пароль', edit_user_registration_path %>
+</p>
+
