fixup views (devise, events, layouts)

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=Edge,chrome=1">
@@ -33,7 +33,7 @@
 </div>
 
 <div class="container">
-  <div class="row mt-5 justify-content-center vh-100">
+  <div class="row mt-5 mb-5 justify-content-center vh-100">
     <div class="col-8">
       <%= yield %>
     </div>
