--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,15 +1,15 @@
-<h2>Resend confirmation instructions</h2>
+<h2 class="mt-4 text-center">Инструкции по подтверждению</h2>
 
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
+  <div class="field mt-3">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
   </div>
 
-  <div class="actions">
-    <%= f.submit "Отправить инструкции по подтверждению повторно" %>
+  <div class="actions mt-3 mb-3">
+    <%= f.submit "Отправить инструкции" %>
   </div>
 <% end %>
 
