--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,30 +1,30 @@
 <div class="mb-3">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Войти", new_session_path(resource_name) %><br/>
+    <%= link_to "Войти", new_session_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Зарегистрироваться", new_registration_path(resource_name) %><br/>
+    <%= link_to "Зарегистрироваться", new_registration_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Забыли пароль?", new_password_path(resource_name) %><br/>
+    <%= link_to "Забыли пароль?", new_password_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.confirmable? && controller_name != 'confirmations' %>
-    <%= link_to "Не получили инструкций по подтверждению?", new_confirmation_path(resource_name) %><br/>
+    <%= link_to "Не получили инструкций по подтверждению?", new_confirmation_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.lockable? && resource_class.unlock_strategy_enabled?(:email) && controller_name != 'unlocks' %>
-    <%= link_to "Не получили инструкции по разблорировке?", new_unlock_path(resource_name) %><br/>
+    <%= link_to "Не получили инструкции по разблорировке?", new_unlock_path(resource_name) %>
   <% end %>
 </div>
 
@@ -32,7 +32,6 @@
   <%- if devise_mapping.omniauthable? %>
     <%- resource_class.omniauth_providers.each do |provider| %>
       <%= link_to "Зарегистрироваться с #{OmniAuth::Utils.camelize(provider)}", omniauth_authorize_path(resource_name, provider) %>
-      <br/>
     <% end %>
   <% end %>
 </div>
