--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,16 @@
 <div class="container">
   <div class="row mt-5 mb-5 justify-content-center vh-100">
     <div class="col-8">
+      <% if flash.any? %>
+        <div class="alert alert-success">
+          <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <% flash.each do |name, message| %>
+            <%= content_tag :div, message, class: "flash-#{name}" %>
+          <% end %>
+        </div>
+      <% end %>
       <%= yield %>
     </div>
   </div>
