--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,27 +1,27 @@
-<%= form_for(@event) do |f| %>
+<%= form_for @event, html: { multipart: true } do |f| %>
   <%= render partial: 'partials/form_errors', locals: {model: @event} %>
 
-  <div class="form-group">
-    <%= f.label :title %>
+  <div class="form mt-3">
+    <%= f.label :title, class: "font-weight-bold" %>
     <%= f.text_field :title, class: 'form-control' %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :address %>
+  <div class="form mt-3">
+    <%= f.label :address, class: "font-weight-bold" %>
     <%= f.text_field :address, class: 'form-control' %>
   </div>
 
-  <div class="form-group">
-    <%= f.label :datetime %>
+  <div class="form mt-3">
+    <%= f.label :datetime, class: "font-weight-bold" %>
     <p><%= f.datetime_select :datetime, class: 'form-control' %></p>
   </div>
 
-  <div class="form-group">
-    <%= f.label :description %>
+  <div class="form mt-3">
+    <%= f.label :description, class: "font-weight-bold" %>
     <%= f.text_area :description, class: 'form-control' %>
   </div>
 
-  <div class="actions">
+  <div class="actions mt-3 mb-3">
     <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
     или <%= link_to 'вернуться', :back %>
   </div>
