--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
 <div class="navbar navbar-expand-lg navbar-light bg-light navbar-static-top">
   <div class="container">
-    <%= link_to "BBQ!", root_path, class: 'navbar-brand' %>
+    <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -50,7 +50,7 @@
   </div>
 
   <footer class="blockquote-footer">
-    <p>&copy; Company 2021</p>
+    <p>&copy; <%= t 'app.company' %> 2021</p>
   </footer>
 
 </div>
