--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form mt-3">
     <%= f.label :datetime, class: "font-weight-bold" %>
-    <p><%= f.datetime_select :datetime, class: 'form-control' %></p>
+    <p><%= f.text_field :datetime, class: 'form-control datepicker-here' %></p>
   </div>
 
   <div class="form mt-3">
