--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,7 +16,7 @@
           <% if current_user_can_edit?(@event) %>
             <div class="buffer-both">
               <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
-              <%= link_to "Удалить событие", event_path(@event), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-warning my-1" %>
+              <%= link_to 'Удалить событие', event_path(@event), data: { confirm: 'Вы уверены?' }, method: :delete, class: 'btn btn-warning my-1' %>
             </div>
           <% end %>
         </div>
@@ -28,7 +28,7 @@
     <div class="col-md-8">
       <div class="event-comments buffer-top">
         <%= render partial: 'comments/form',
-                   locals: {comment: @new_comment || @event.comments.build} %>
+                   locals: { comment: @new_comment || @event.comments.build } %>
 
         <div class="buffer-both">
           <%= render partial: 'comments/comment',
