--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
   </div>
 </div>
 
-<div class="container">
+<div class="container h-100">
   <div class="row mt-5 mb-5 justify-content-center vh-100">
     <div class="col-8">
       <% if flash.any? %>
@@ -47,13 +47,12 @@
         </div>
       <% end %>
       <%= yield %>
+      <footer class="blockquote-footer">
+        <p>&copy; <%= t 'app.company' %> 2021</p>
+      </footer>
     </div>
   </div>
-
-  <footer class="blockquote-footer">
-    <p>&copy; <%= t 'app.company' %> 2021</p>
-  </footer>
-
 </div>
+
 </body>
 </html>
