--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,16 @@
 <h2 class="mt-4 text-center">Забыли пароль?</h2>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render 'devise/shared/error_messages', resource: resource %>
 
   <div class="field mt-3">
-    <%= f.label :email, class: "font-weight-bold" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+    <%= f.label :email, class: 'font-weight-bold' %>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
   </div>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit "Отправьте инструкции по сбросу пароля", class: "btn btn-primary my-1" %>
+    <%= f.submit 'Отправьте инструкции по сбросу пароля', class: 'btn btn-primary my-1' %>
   </div>
 <% end %>
 
-<%= render "devise/shared/links" %>
+<%= render 'devise/shared/links' %>
