--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,11 @@
 <h2 class="mt-4 text-center">Изменение пароля</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+  <%= render 'devise/shared/error_messages', resource: resource %>
 
   <div class="form mt-3">
-    <%= f.label :email, class: "font-weight-bold" %>
-    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
+    <%= f.label :email, class: 'font-weight-bold' %>
+    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
@@ -13,8 +13,8 @@
   <% end %>
 
   <div class="field mt-3">
-    <%= f.label :password, class: "font-weight-bold"  %> (Оставьте поля пустыми если не хотите их менять)
-    <%= f.password_field :password, autocomplete: "Новый пароль", class: "form-control" %>
+    <%= f.label :password, class: 'font-weight-bold'  %> (Оставьте поля пустыми если не хотите их менять)
+    <%= f.password_field :password, autocomplete: 'Новый пароль', class: 'form-control' %>
     <% if @minimum_password_length %>
       <em>Не менее <%= @minimum_password_length %> символов</em>
     <% end %>
