--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -4,7 +4,7 @@
   <div id="error_explanation">
     <div class="alert alert-danger">
       <div class="lead buffer-bottom">
-        <%= I18n.t("errors.messages.not_saved",
+        <%= I18n.t('errors.messages.not_saved',
                    count: errors.count)
         %>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close">
