--- a/app/views/devise/shared/_links.html.erb
+++ b/app/views/devise/shared/_links.html.erb
@@ -1,18 +1,18 @@
 <div class="mb-3">
   <%- if controller_name != 'sessions' %>
-    <%= link_to "Войти", new_session_path(resource_name) %>
+    <%= link_to 'Войти', new_session_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-    <%= link_to "Зарегистрироваться", new_registration_path(resource_name) %>
+    <%= link_to 'Зарегистрироваться', new_registration_path(resource_name) %>
   <% end %>
 </div>
 
 <div class="mb-3">
   <%- if devise_mapping.recoverable? && controller_name != 'passwords' && controller_name != 'registrations' %>
-    <%= link_to "Забыли пароль?", new_password_path(resource_name) %>
+    <%= link_to 'Забыли пароль?', new_password_path(resource_name) %>
   <% end %>
 </div>
 
