--- a/app/views/partials/_form_errors.html.erb
+++ b/app/views/partials/_form_errors.html.erb
@@ -3,7 +3,7 @@
 <% if errors.any? %>
   <div class="alert alert-danger">
     <div class="lead buffer-bottom">
-      <%= I18n.t("errors.messages.not_saved",
+      <%= I18n.t('errors.messages.not_saved',
                  count: errors.count)
       %>
       <button type="button" class="close" data-dismiss="alert" aria-label="Close">
