--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,12 +2,12 @@
   <%= render partial: 'partials/form_errors', locals: { model: @user } %>
 
   <div class="form mt-3">
-    <%= f.label :name, class: "font-weight-bold" %>
+    <%= f.label :name, class: 'font-weight-bold' %>
     <%= f.text_field :name, class: 'form-control' %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :email, class: "font-weight-bold" %>
+    <%= f.label :email, class: 'font-weight-bold' %>
     <%= f.text_field :email, class: 'form-control' %>
   </div>
 
