custom_datepicker.js modified, deleted data-timepicker from view

--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -13,7 +13,7 @@
 
   <div class="form mt-3">
     <%= f.label :datetime, class: 'font-weight-bold' %>
-    <%= f.text_field :datetime, class: 'form-control', 'data-timepicker': 'true' %>
+    <%= f.text_field :datetime, class: 'form-control' %>
   </div>
 
   <div class="form mt-3">
