event-mailer, local_env, sendgrid

--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -1,8 +1,9 @@
-<p>Здравствуйте <%= @resource.email %>!</p>
+<% require 'devise/version' %>
+<p><%= t('.greeting', :recipient => @resource.email, :default => "Hello #{@resource.email}!") %></p>
 
-<p>Кто-то запросил ссылку для изменения вашего пароля. Сделать это можно по ссылке ниже.</p>
+<p><%= t('.instruction', :default => "Someone has requested a link to change your password, and you can do this through the link below.") %></p>
 
-<p><%= link_to 'Изменить пароль', edit_password_url(@resource, reset_password_token: @token) %></p>
+<p><%= link_to t('.action', :default => "Change my password"), edit_password_url(@resource, :reset_password_token => @token) %></p>
 
-<p>Если вы не запрашивали изменение пароля, пожалуйста проигнорируйте это сообщение.</p>
-<p>Ваш пароль не изменится, пока вы не перейдете по ссылке выше и не создадите новый.</p>
+<p><%= t('.instruction_2', :default => "If you didn't request this, please ignore this email.") %></p>
+<p><%= t('.instruction_3', :default => "Your password won't change until you access the link above and create a new one.") %></p>
