--- a/app/views/event_mailer/photo.text.erb
+++ b/app/views/event_mailer/photo.text.erb
@@ -1,7 +1,7 @@
 <%= t '.title' %>
 ----
 
-<%= image_tag(@photo.photo.thumb.url) %>
+<%= link_to image_tag(@photo.photo.url), @photo.photo.url %>
 
 <%= t '.author' %>: <%= @photo.user.name %>
 
