--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,6 +24,12 @@
     </div>
   </div>
 
+  <div class="event-info row">
+    <div class="col-md-12">
+      <div id="map" data-address="<%= @event.address %>"></div>
+    </div>
+  </div>
+
   <div class="row">
     <div class="col-md-8">
       <div class="event-photos">
