fixup map, add lightbox

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -24,9 +24,9 @@
     </div>
   </div>
 
-  <div class="event-info row">
+  <div class="row">
     <div class="col-md-12">
-      <div id="map" data-address="<%= @event.address %>"></div>
+      <div class="event-map" id="map" data-address="<%= @event.address %>"></div>
     </div>
   </div>
 
