--- a/app/frontend/styles/events.css
+++ b/app/frontend/styles/events.css
@@ -5,6 +5,13 @@
   margin-bottom: 20px;
 }
 
+.event-map {
+  width: 100%;
+  height: 400px;
+  border: 3px solid darkgreen;
+  border-radius: 3px;
+}
+
 .event-background {
   position: absolute;
   width: 100%;
