--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -1,4 +1,5 @@
 <div class="event-photo buffer-both">
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url %>
-  Добавил <%= render partial: 'users/user', object: photo.user %>
+  <% photo_author = "Добавил #{render partial: 'users/user', object: photo.user}" %>
+  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: { toggle: "lightbox", title: photo_author } %>
+  Добавил: <%= render partial: 'users/user', object: photo.user %>
 </div>
