--- a/app/views/photos/_photo.html.erb
+++ b/app/views/photos/_photo.html.erb
@@ -6,6 +6,6 @@
 
   <% photo_author << trash_icon if current_user_can_edit?(photo) %>
 
-  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: { toggle: "lightbox", title: photo_author } %>
+  <%= link_to image_tag(photo.photo.thumb.url), photo.photo.url, data: { toggle: "lightbox", title: photo_author, gallery: "photo-album" } %>
   Добавил: <%= render partial: 'users/user', object: photo.user %>
 </div>
