--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -3,7 +3,7 @@
   <p>
     <span>
       <% if comment.user.present? %>
-        <%= render partial: 'users/user', object: comment.user %>
+        <%= render partial: "users/user", object: comment.user %>
       <% else %>
         <em><strong><%= comment.user_name %></strong></em>
       <% end %>
@@ -11,8 +11,8 @@
     <em><%= l comment.created_at, format: :short %></em>
     <% if policy(comment).destroy? %>
       <%= link_to(
-            fa_icon('trash'), event_comment_path(comment.event, comment),
-            method: :delete, data: {confirm: t('.destroy_confirm')}
+            fa_icon("trash"), event_comment_path(comment.event, comment),
+            method: :delete, data: {confirm: t(".destroy_confirm")}
           ) %>
     <% end %>
   </p>
