--- a/app/views/subscriptions/_subscription.html.erb
+++ b/app/views/subscriptions/_subscription.html.erb
@@ -1,15 +1,15 @@
 <span class="subscription">
   <% if subscription.user.present? %>
-    <%= render partial: 'users/user', object: subscription.user %>
+    <%= render partial: "users/user", object: subscription.user %>
   <% else %>
     <em><%= subscription.user_name %></em>
   <% end %>
   <% if policy(subscription).destroy? %>
     <%= link_to(
-          fa_icon('times'),
+          fa_icon("times"),
           event_subscription_path(subscription.event, subscription),
           method: :delete,
-          data: { confirm: t('.destroy_confirm') }
+          data: { confirm: t(".destroy_confirm") }
         ) %>
   <% end %>
 </span>
