--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <h1 class="mt-4 text-center">Редактирование профиля</h1>
 
-<%= render 'form' %>
+<%= render "form" %>
 
 <p class="buffer-top">
-  <%= link_to 'Сменить пароль', edit_user_registration_path %>
+  <%= link_to "Сменить пароль", edit_user_registration_path %>
 </p>
