--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -1,25 +1,25 @@
-<h1 class="mt-4 text-center"><%= t('.change_your_password') %></h1>
+<h1 class="mt-4 text-center"><%= t(".change_your_password") %></h1>
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render partial: 'partials/form_errors', locals: { model: @user } %>
+  <%= render partial: "partials/form_errors", locals: { model: @user } %>
   <%= f.hidden_field :reset_password_token %>
 
   <div class="form mt-3">
-    <%= f.label :password, t('.new_password') %><br />
+    <%= f.label :password, t(".new_password") %><br />
     <% if @minimum_password_length %>
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em><br />
+      <em><%= t("devise.shared.minimum_password_length", count: @minimum_password_length) %></em><br />
     <% end %>
-    <%= f.password_field :password, autofocus: true, autocomplete: 'new-password', class: 'form-control' %>
+    <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :password_confirmation, t('.confirm_new_password') %><br />
-    <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control' %>
+    <%= f.label :password_confirmation, t(".confirm_new_password") %><br />
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
   </div>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit t('.change_my_password'), class: 'btn btn-primary my-1' %>
+    <%= f.submit t(".change_my_password"), class: "btn btn-primary my-1" %>
   </div>
 <% end %>
 
-<%= render 'devise/shared/links' %>
+<%= render "devise/shared/links" %>
