--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,48 +1,48 @@
-<h1 class="mt-4 text-center"><%= 'Редактрование профиля' %></h1>
+<h1 class="mt-4 text-center"><%= "Редактрование профиля" %></h1>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render partial: 'partials/form_errors', locals: { model: @user } %>
+  <%= render partial: "partials/form_errors", locals: { model: @user } %>
 
   <div class="form mt-3">
-    <%= f.label :email, class: 'font-weight-bold' %><br/>
-    <%= f.email_field :email, autofocus: true, autocomplete: 'email', class: 'form-control' %>
+    <%= f.label :email, class: "font-weight-bold" %><br/>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control" %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div><%= t('.currently_waiting_confirmation_for_email', email: resource.unconfirmed_email) %></div>
+    <div><%= t(".currently_waiting_confirmation_for_email", email: resource.unconfirmed_email) %></div>
   <% end %>
 
   <div class="form mt-3">
-    <%= f.label :password, class: 'font-weight-bold' %> <i>(<%= t('.leave_blank_if_you_don_t_want_to_change_it') %>)</i><br/>
-    <%= f.password_field :password, autocomplete: 'new-password', class: 'form-control' %>
+    <%= f.label :password, class: "font-weight-bold" %> <i>(<%= t(".leave_blank_if_you_don_t_want_to_change_it") %>)</i><br/>
+    <%= f.password_field :password, autocomplete: "new-password", class: "form-control" %>
     <% if @minimum_password_length %>
       <br/>
-      <em><%= t('devise.shared.minimum_password_length', count: @minimum_password_length) %></em>
+      <em><%= t("devise.shared.minimum_password_length", count: @minimum_password_length) %></em>
     <% end %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :password_confirmation, class: 'font-weight-bold' %><br/>
-    <%= f.password_field :password_confirmation, autocomplete: 'new-password', class: 'form-control' %>
+    <%= f.label :password_confirmation, class: "font-weight-bold" %><br/>
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "form-control" %>
   </div>
 
   <div class="form mt-3">
     <%= f.label :current_password, class: "font-weight-bold" %>
-    <i>(<%= t('.we_need_your_current_password_to_confirm_your_changes') %>)</i><br/>
-    <%= f.password_field :current_password, autocomplete: 'current-password', class: 'form-control' %>
+    <i>(<%= t(".we_need_your_current_password_to_confirm_your_changes") %>)</i><br/>
+    <%= f.password_field :current_password, autocomplete: "current-password", class: "form-control" %>
   </div>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit t('.update'), class: 'btn btn-primary my-1' %>
+    <%= f.submit t(".update"), class: "btn btn-primary my-1" %>
   </div>
 <% end %>
 
-<h3><%= t('.cancel_my_account') %></h3>
+<h3><%= t(".cancel_my_account") %></h3>
 
-<%= t('.unhappy') %>
+<%= t(".unhappy") %>
 
 <div class="actions mt-3 mb-3">
-  <%= button_to t('.cancel_my_account'), registration_path(resource_name), data: { confirm: t('.are_you_sure') }, method: :delete, class: 'btn btn-warning' %>
+  <%= button_to t(".cancel_my_account"), registration_path(resource_name), data: { confirm: t(".are_you_sure") }, method: :delete, class: "btn btn-warning" %>
 </div>
 
-<%= link_to t('devise.shared.links.back'), :back %>
+<%= link_to t("devise.shared.links.back"), :back %>
