--- a/app/views/event_mailer/photo.text.erb
+++ b/app/views/event_mailer/photo.text.erb
@@ -1,11 +1,11 @@
-<%= t '.title' %>
+<%= t ".title" %>
 ----
 
 <%= link_to image_tag(@photo.photo.thumb.url), @photo.photo.url %>
 
-<%= t '.author' %>: <%= @photo.user.name %>
+<%= t ".author" %>: <%= @photo.user.name %>
 
 --------------------------------
-<%= t '.event' %>: <%= link_to @event.title, event_url(@event) %>
-<%= t '.datetime' %>: <%= l @event.datetime %>
-<%= t '.owner' %>: <%= @event.user.name %>
+<%= t ".event" %>: <%= link_to @event.title, event_url(@event) %>
+<%= t ".datetime" %>: <%= l @event.datetime %>
+<%= t ".owner" %>: <%= @event.user.name %>
