--- a/app/views/events/_event.html.erb
+++ b/app/views/events/_event.html.erb
@@ -1,8 +1,8 @@
 <div class="col-sm-6 col-md-4">
   <div class="thumbnail buffer-both">
 
-    <%= content_tag 'div', '',
-                    class: 'event-background',
+    <%= content_tag "div", "",
+                    class: "event-background",
                     style: "background-image: url(#{event_photo(event)})"
     %>
 
@@ -15,7 +15,7 @@
         </div>
       </div>
       <% event.visitors.each do |user| %>
-        <%= image_tag user_avatar_thumb(user), class: 'img-icon', title: user.name %>
+        <%= image_tag user_avatar_thumb(user), class: "img-icon", title: user.name %>
       <% end %>
     </div>
   </div>
