--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -1,33 +1,33 @@
 <%= form_for @event, html: { multipart: true } do |f| %>
-  <%= render partial: 'partials/form_errors', locals: { model: @event } %>
+  <%= render partial: "partials/form_errors", locals: { model: @event } %>
 
   <div class="form mt-3">
-    <%= f.label :title, class: 'font-weight-bold' %>
-    <%= f.text_field :title, class: 'form-control' %>
+    <%= f.label :title, class: "font-weight-bold" %>
+    <%= f.text_field :title, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :address, class: 'font-weight-bold' %>
-    <%= f.text_field :address, class: 'form-control' %>
+    <%= f.label :address, class: "font-weight-bold" %>
+    <%= f.text_field :address, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :datetime, class: 'font-weight-bold' %>
-    <%= f.text_field :datetime, class: 'form-control' %>
+    <%= f.label :datetime, class: "font-weight-bold" %>
+    <%= f.text_field :datetime, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :description, class: 'font-weight-bold' %>
-    <%= f.text_area :description, class: 'form-control' %>
+    <%= f.label :description, class: "font-weight-bold" %>
+    <%= f.text_area :description, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :pincode, class: 'font-weight-bold' %>
-    <%= f.text_field :pincode, class: 'form-control' %>
+    <%= f.label :pincode, class: "font-weight-bold" %>
+    <%= f.text_field :pincode, class: "form-control" %>
   </div>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
-    или <%= link_to 'вернуться', :back %>
+    <%= f.submit "Сохранить", class: "btn btn-primary" %>
+    или <%= link_to "вернуться", :back %>
   </div>
 <% end %>
