--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,9 @@
 <h1 class="mt-4">События</h1>
 
 <div class="mt-1 mb-4">
-  <%= link_to 'Создать событие', new_event_path, class: 'btn btn-success' %>
+  <%= link_to "Создать событие", new_event_path, class: "btn btn-success" %>
 </div>
 
 <div class="row">
-  <%= render partial: 'events/event', collection: @events %>
+  <%= render partial: "events/event", collection: @events %>
 </div>
