--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,7 +1,7 @@
 <div class="event buffer-both">
   <div class="event-info row">
     <div class="col-md-12">
-      <%= content_tag 'div', '', class: 'event-background', style: "background-image: url(#{event_photo(@event)})" %>
+      <%= content_tag "div", "", class: "event-background", style: "background-image: url(#{event_photo(@event)})" %>
 
       <div class="event-info-inner row">
         <div class="col-md-6">
@@ -15,8 +15,8 @@
 
           <% if policy(@event).edit? %>
             <div class="buffer-both">
-              <%= link_to 'Изменить', edit_event_path(@event), class: 'btn btn-primary' %>
-              <%= link_to 'Удалить событие', event_path(@event), data: { confirm: 'Вы уверены?' }, method: :delete, class: 'btn btn-warning my-1' %>
+              <%= link_to "Изменить", edit_event_path(@event), class: "btn btn-primary" %>
+              <%= link_to 'Удалить событие', event_path(@event), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-warning my-1" %>
             </div>
           <% end %>
         </div>
@@ -34,19 +34,19 @@
     <div class="col-md-8">
       <div class="event-photos">
         <div class="event-photos-gallery">
-          <%= render partial: 'photos/photo', collection: policy_scope(@event.photos.except(@new_photo)) %>
+          <%= render partial: "photos/photo", collection: policy_scope(@event.photos.except(@new_photo)) %>
         </div>
 
         <div class="event-photo-form">
-          <%= render partial: 'photos/form', locals: { photo: @new_photo || @event.photos.build } %>
+          <%= render partial: "photos/form", locals: { photo: @new_photo || @event.photos.build } %>
         </div>
       </div>
       <div class="event-comments buffer-top">
-        <%= render partial: 'comments/form',
+        <%= render partial: "comments/form",
                    locals: { comment: @new_comment || @event.comments.build } %>
 
         <div class="buffer-both">
-          <%= render partial: 'comments/comment',
+          <%= render partial: "comments/comment",
                      collection: policy_scope(@event.comments.except(@new_comment)) %>
         </div>
       </div>
@@ -55,7 +55,7 @@
     <div class="col-md-4">
       <div class="event-owner">
         <h4>Зовет:</h4>
-        <p><%= render partial: 'users/user', object: @event.user %></p>
+        <p><%= render partial: "users/user", object: @event.user %></p>
       </div>
 
       <% unless @event.subscriptions.count.zero? %>
@@ -63,7 +63,7 @@
           <h4>Пойдут:</h4>
           <div>
             <p>
-              <%= render partial: 'subscriptions/subscription',
+              <%= render partial: "subscriptions/subscription",
                          collection: policy_scope(@event.subscriptions.except(@new_subscription)) %>
             </p>
           </div>
@@ -74,7 +74,7 @@
         <div class="event-subscription-form">
           <h4>Я пойду:</h4>
           <div>
-            <%= render partial: 'subscriptions/form', locals: {
+            <%= render partial: "subscriptions/form", locals: {
               subscription: @new_subscription || @event.subscriptions.build
             } %>
           </div>
