--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,14 +8,14 @@
   <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&apikey=90fb7a73-b3c0-410f-8775-baaa4934d433" type="text/javascript"></script>
   <title><%= content_for?(:title) ? yield(:title) : "Bbq" %></title>
   <%= csrf_meta_tags %>
-  <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-  <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_pack_tag "application", media: "all", 'data-turbolinks-track': "reload" %>
+  <%= javascript_pack_tag "application", 'data-turbolinks-track': "reload" %>
 </head>
 <body>
 
 <div class="navbar navbar-expand-lg navbar-light bg-light navbar-static-top">
   <div class="container">
-    <%= link_to t('app.name'), root_path, class: 'navbar-brand' %>
+    <%= link_to t("app.name"), root_path, class: "navbar-brand" %>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -23,11 +23,11 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <ul class="nav navbar-nav">
         <% if user_signed_in? %>
-          <li><%= link_to 'Профиль', current_user, class: 'nav-link' %></li>
-          <li><%= link_to 'Выйти', destroy_user_session_path, class: 'nav-link', :method => :delete %></li>
+          <li><%= link_to "Профиль", current_user, class: "nav-link" %></li>
+          <li><%= link_to "Выйти", destroy_user_session_path, class: "nav-link", :method => :delete %></li>
         <% else %>
-          <li><%= link_to 'Войти', new_user_session_path, class: 'nav-link' %></li>
-          <li><%= link_to 'Зарегистрироваться', new_user_registration_path, class: 'nav-link' %></li>
+          <li><%= link_to "Войти", new_user_session_path, class: "nav-link" %></li>
+          <li><%= link_to "Зарегистрироваться", new_user_registration_path, class: "nav-link" %></li>
         <% end %>
       </ul>
     </div>
@@ -49,7 +49,7 @@
       <% end %>
       <%= yield %>
       <footer class="blockquote-footer">
-        <p>&copy; <%= t 'app.company' %> 2021</p>
+        <p>&copy; <%= t "app.company" %> 2021</p>
       </footer>
     </div>
   </div>
