--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -1,5 +1,5 @@
 <%= form_for [@event, photo], html: { multipart: true } do |f| %>
-  <%= render partial: 'partials/form_errors', locals: {model: photo} %>
+  <%= render partial: "partials/form_errors", locals: {model: photo} %>
 
   <div class="form-group">
     <%= f.label :photo %>
@@ -7,6 +7,6 @@
   </div>
 
   <div class="actions">
-    <%= f.submit 'Загрузить', class: 'btn btn-primary' %>
+    <%= f.submit "Загрузить", class: "btn btn-primary" %>
   </div>
 <% end %>
