--- a/app/views/subscriptions/_form.html.erb
+++ b/app/views/subscriptions/_form.html.erb
@@ -1,21 +1,21 @@
 <%= form_for [@event, subscription] do |f| %>
-  <%= render partial: 'partials/form_errors', locals: { model: subscription } %>
+  <%= render partial: "partials/form_errors", locals: { model: subscription } %>
 
   <% unless user_signed_in? %>
     <div class="field mt-3">
-      <%= f.label :user_name, class: 'font-weight-bold' %>
-      <%= f.text_field :user_name, class: 'form-control' %>
+      <%= f.label :user_name, class: "font-weight-bold" %>
+      <%= f.text_field :user_name, class: "form-control" %>
     </div>
 
     <div class="field mt-3">
-      <%= f.label :user_email, class: 'font-weight-bold' %>
-      <%= f.text_field :user_email, class: 'form-control' %>
+      <%= f.label :user_email, class: "font-weight-bold" %>
+      <%= f.text_field :user_email, class: "form-control" %>
     </div>
   <% end %>
 
   <%= recaptcha_tags unless current_user.present? %>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit 'Подписаться', class: 'btn btn-primary' %>
+    <%= f.submit "Подписаться", class: "btn btn-primary" %>
   </div>
 <% end %>
