--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,24 +1,24 @@
 <%= form_for @user, html: { multipart: true } do |f| %>
-  <%= render partial: 'partials/form_errors', locals: { model: @user } %>
+  <%= render partial: "partials/form_errors", locals: { model: @user } %>
 
   <div class="form mt-3">
-    <%= f.label :name, class: 'font-weight-bold' %>
-    <%= f.text_field :name, class: 'form-control' %>
+    <%= f.label :name, class: "font-weight-bold" %>
+    <%= f.text_field :name, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :email, class: 'font-weight-bold' %>
-    <%= f.text_field :email, class: 'form-control' %>
+    <%= f.label :email, class: "font-weight-bold" %>
+    <%= f.text_field :email, class: "form-control" %>
   </div>
 
   <div class="form mt-3">
-    <%= f.label :avatar, class: 'font-weight-bold' %>
+    <%= f.label :avatar, class: "font-weight-bold" %>
     <%= image_tag(@user.avatar.thumb.url) if @user.avatar?%>
     <%= f.file_field :avatar %>
   </div>
 
   <div class="actions mt-3 mb-3">
-    <%= f.submit 'Сохранить', class: 'btn btn-primary' %>
+    <%= f.submit "Сохранить", class: "btn btn-primary" %>
   </div>
-  <%= link_to 'Вернуться назад', :back %>
+  <%= link_to "Вернуться назад", :back %>
 <% end %>
