--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
   <%= image_tag user_avatar(@user) %>
   <% if @user == current_user %>
     <p class="buffer-top">
-      <%= link_to 'Редактировать профиль', edit_user_path(@user), class: 'btn btn-secondary' %>
+      <%= link_to "Редактировать профиль", edit_user_path(@user), class: "btn btn-secondary" %>
     </p>
   <% end %>
 
@@ -12,7 +12,7 @@
       <% if @user.events.any? %>
         <h3>Организовал:</h3>
         <div class="row">
-          <%= render partial: 'events/event', collection: @user.events %>
+          <%= render partial: "events/event", collection: @user.events %>
         </div>
       <% else %>
         <p class="buffer-top">Пользователь пока не организовал ни одного события</p>
