add privacy policy

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
       <%= yield %>
       <footer class="blockquote-footer">
         <p>&copy; <%= t "app.company" %> 2021</p>
+        <%= link_to "Политика конфиденциальности", info_pages_privacy_policy_path %>
       </footer>
     </div>
   </div>
