--- a/app/frontend/styles/custom.css
+++ b/app/frontend/styles/custom.css
@@ -6,6 +6,10 @@
   margin-bottom: 20px;
 }
 
+.buffer-bottom-xl {
+  margin-bottom: 40px;
+}
+
 .buffer-both {
   margin-top: 20px;
   margin-bottom: 20px;
