--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -16,7 +16,7 @@
           <% if policy(@event).edit? %>
             <div class="buffer-both">
               <%= link_to "Изменить", edit_event_path(@event), class: "btn btn-primary" %>
-              <%= link_to 'Удалить событие', event_path(@event), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-warning my-1" %>
+              <%= link_to "Удалить событие", event_path(@event), data: { confirm: "Вы уверены?" }, method: :delete, class: "btn btn-warning my-1" %>
             </div>
           <% end %>
         </div>
