--- a/app/views/info_pages/privacy_policy.html.erb
+++ b/app/views/info_pages/privacy_policy.html.erb
@@ -47,8 +47,7 @@
 
 <p>3.1. Настоящая Политика конфиденциальности устанавливает обязательства Администрации сайта по неразглашению и
   обеспечению режима защиты конфиденциальности персональных данных, которые Пользователь предоставляет по запросу
-  Администрации сайта при регистрации на Сайте или при оформлении заказа для приобретения Товара, оказания Услуг или
-  выполнения Работ.</p>
+  Администрации сайта при регистрации на Сайте.</p>
 
 <p>3.2. Персональные данные, разрешённые к обработке в рамках настоящей Политики конфиденциальности, предоставляются
   Пользователем путём заполнения формы на Сайте и могут включать в себя следующую информацию:</p>
@@ -149,10 +148,13 @@
 <p>7.4. К настоящей Политике конфиденциальности и отношениям между Пользователем и Администрацией сайта применяется
   действующее законодательство Российской Федерации.</p>
 
-<h4 class="buffer-both">9. ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ</h4>
+<h4 class="buffer-both">9. ДОПОЛНИТЕЛЬНЫЕ УСЛОВИЯ И ИНФОРМАЦИЯ</h4>
 
 <p>8.1. Администрация сайта вправе вносить изменения в настоящую Политику конфиденциальности без согласия и
   предварительного уведомления Пользователя.</p>
 
 <p>8.2. Новая Политика конфиденциальности вступает в силу с момента ее размещения на Сайте, если иное не предусмотрено
   новой редакцией Политики конфиденциальности.</p>
+<p>8.3. <%= link_to I18n.t("controllers.info_pages.delete_instruction"), info_pages_delete_instruction_path %></p>
+
+<%= link_to "На главную", events_path %>
